--- a/index.html
+++ b/index.html
@@ -1,131 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umar</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            max-width: 1200px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        h1, h2 {
-            text-align: center;
-            margin-top: 0;
-        }
-
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 150px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        /* Flexbox for Navbar */
-        .navbar {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            border-top: 1px solid #ccc;
-            border-bottom: 1px solid #ccc;
-            padding: 10px 0;
-        }
-
-        .navbar a {
-            text-decoration: none;
-            color: #000;
-            font-weight: bold;
-        }
-
-        .navbar a:hover {
-            text-decoration: underline;
-        }
-
-        /* Grid layout for skills and experience sections */
-        .profile-section {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        .profile-section h2 {
-            text-align: left;
-        }
-
-        /* Each list item in experience and skills */
-        .skills, .experience {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        .skills li, .experience li {
-            margin-bottom: 10px;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-            }
-
-            .profile-section {
-                grid-template-columns: 1fr;
-            }
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Umar</h1>
-<img src="img/cyclist.jpg" alt="Profile Image">
 
-<div class="navbar">
-    <a href="about_me.html">About Me</a>
-    <a href="hobbies.html">Hobbies</a>
-    <a href="contact.html">Contact</a>
+<h1>Umar Faruque</h1>
+<img src="img/cyclist.jpg" alt="Profile Image" class="profile-image">
+
+<div class="section nav-section">
+    <a href="about_me.html">About Me</a> |
+    <a href="hobbies.html">Hobbies</a> |
+    <a href="contact.html">Contact Me</a>
 </div>
 
-<div class="profile-section">
-    <div>
-        <h2>Skills</h2>
-        <ul class="skills">
-            <li>C++: Boost STD LIB</li>
-            <li>Python: Django, NumPy, Matplotlib, Pandas, Plotly, Scikit-learn, Jupyter</li>
-            <li>Azure DevOps for Machine Learning</li>
-            <li>Agile Methodology</li>
-            <li>Heroku CLI, Git CLI, Ubuntu, Windows 10/11</li>
-            <li>CLion, VSCode</li>
-            <li>Anaconda/Mamba/Venv</li>
-        </ul>
-    </div>
-
-    <div>
-        <h2>Experience</h2>
-        <ul class="experience">
-            <li><strong>MetLife - Data Science Intern</strong> | May 2024 – Present</li>
-            <li><strong>MetLife - Data Science Intern</strong> | May 2023 – August 2023</li>
-            <li><strong>Hunter College - College Assistant</strong> | April 2022 – May 2024</li>
-            <li><strong>CSCI Department Hunter College - Teaching Assistant</strong> | January 2022 – May 2023</li>
-            <li><strong>Department of Social Services - ITS Intern</strong> | July 2022 – August 2022</li>
-        </ul>
-    </div>
+<div class="section skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>C++: Boost STD LIB</li>
+        <li>Python: Django, NumPy, Matplotlib, Pandas, Plotly, Scikit-learn, Jupyter</li>
+        <li>Azure DevOps for Machine Learning</li>
+        <li>Agile Methodology</li>
+        <li>Heroku CLI, Git CLI, Ubuntu, Windows 10/11</li>
+        <li>CLion, VSCode</li>
+        <li>Anaconda/Mamba/Venv</li>
+    </ul>
 </div>
 
-<div class="section">
+<div class="section experience">
+    <h2>Experience</h2>
+    <ul>
+        <li><strong>MetLife - Data Science Intern</strong> | May 2024 – August 2024</li>
+        <li><strong>MetLife - Data Science Intern</strong> | May 2023 – August 2023</li>
+        <li><strong>Hunter College - College Assistant</strong> | April 2022 – May 2024</li>
+        <li><strong>CSCI Department Hunter College - Teaching Assistant</strong> | January 2022 – May 2023</li>
+        <li><strong>Department of Social Services - ITS Intern</strong> | July 2022 – August 2022</li>
+    </ul>
+</div>
+
+<div class="section education">
     <h2>Education</h2>
     <ul>
         <li><strong>Hunter College</strong> | Bachelor of Arts in Computer Science</li>
-        <li>Minors: Asian American Studies & Mathematics</li>
-        <li>Expected Graduation: May 2025</li>
+        <li>Minor: Asian American Studies & Mathematics</li>
+        <li>GPA: 3.26 | Expected Graduation: May 2025</li>
     </ul>
 </div>
 
