--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="section skills">
     <h2>Skills</h2>
-    <ul>
+    <ul class="list">
         <li>C++: Boost STD LIB</li>
         <li>Python: Django, NumPy, Matplotlib, Pandas, Plotly, Scikit-learn, Jupyter</li>
         <li>Azure DevOps for Machine Learning</li>
@@ -32,7 +32,7 @@
 
 <div class="section experience">
     <h2>Experience</h2>
-    <ul>
+    <ul class="list">
         <li><strong>MetLife - Data Science Intern</strong> | May 2024 – August 2024</li>
         <li><strong>MetLife - Data Science Intern</strong> | May 2023 – August 2023</li>
         <li><strong>Hunter College - College Assistant</strong> | April 2022 – May 2024</li>
@@ -43,10 +43,10 @@
 
 <div class="section education">
     <h2>Education</h2>
-    <ul>
+    <ul class="list">
         <li><strong>Hunter College</strong> | Bachelor of Arts in Computer Science</li>
         <li>Minor: Asian American Studies & Mathematics</li>
-        <li>GPA: 3.26 | Expected Graduation: May 2025</li>
+        <li>Expected Graduation: May 2025</li>
     </ul>
 </div>
 
